[tool.poetry]
name = "list-film-system-bot-tg"
version = "0.1.0"
description = ""
authors = ["Andrew2797 <andrijgolub27@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
